<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etSubjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_layout"
                    android:hint="@string/subject_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/etSubjectGrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_layout"
                    android:hint="@string/subject_grade"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/etSubjectMarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_layout"
                    android:hint="@string/subject_marks"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp" />

            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>